# training-app-project

./: Data outline.xlsx  README.md  requirements.txt  sql_app.db
exercise_db_build_wger_api/: exercise_data.py  requirements.txt  wger_api.py
exercise_db_build_wger_api/sqlite_db/: sqlite-database.py
firestore/: start_emulator.sh  stop_emulator.sh  test.py
firestore/user/: firestore_utils.py  journal.py
fitness/: .gitignore  Makefile  README.md  file  go.mod
fitness/cmd/myapp/: main.go
fitness/infra/dev/cleanup/: neo4j.sh  (+1 more)
fitness/pkg/utils/: graphy.go
main_dir/: DropTables.sql
main_dir/app_main_pyth/: .gitignore  WORKOUT.json  josh_exercise_list  m_exercises.json  m_goals.json  m_muscle_groups.json  m_splits.json  m_sub_splits.json  requirements.txt  test_exercise_list
main_dir/app_main_pyth/sql_app/: crud.py  database.py  main.py  schemas.py
main_dir/go_compute/: go.mod
main_dir/go_compute/src/: main.go  pyInterface.go
main_dir/py_compute/: appmain.py  main.py  readDb.py  requirements.txt  schedule.py  workout.py
main_dir/vue-front/: .env
old/main_dir/app_main_pyth/: m_exercises.json  m_periods.json  m_splits.json
old/main_dir/vue-front/: package-lock.json
old/wger-api-testground/exercise_db_builder/: wger_api.py
resource_generator/: generator.py  llm_interface.py  pyproject.toml  resource.py
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
sql_app/authorization/: auth.py
vue-front/: .env
wger-api-testground/: sample.json
wger-api-testground/exercise_db_builder/: exercise_data.py  wger_api.py
x_old/: README.md
(+30 files in other folders)
